[tool.poetry]
name = "reference-driver"
version = "0.1.0"
description = ""
authors = ["Tim Armstrong <tim@plaintextnerds.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.1"
uvicorn = "^0.18.3"
boto3 = "^1.24.86"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
